# coding-agent-lab

./: .gitignore  AGENTS.md  README.en.md  README.md
.agents/skills/cc-implement/: SKILL.md
.agents/skills/cc-implement/agents/: openai.yaml
.agents/skills/study-coding-agents/: SKILL.md
.agents/skills/study-coding-agents/agents/: openai.yaml
.agents/skills/study-coding-agents/references/: output-templates.md  research-playbook.md
docs/: claude-code.md  comparisons.md  opencode.md  overview.md
docs/claude-code/: claude-code-failure-cases.md  claude-code-study.md  claude-code-todo.md
notes/: daily-log.md  findings.md
reproductions/claude-code/: .gitignore  README.md  pyproject.toml
reproductions/claude-code/claude_code/: __init__.py  app_service.py  checkpoints.py  cli.py  config.py  context_builder.py  model_client.py  permission_rules.py  permissions.py  runtime.py  session_store.py  tools.py  web.py
reproductions/claude-code/scripts/: dev_ui.sh
reproductions/claude-code/tests/: test_cli.py  test_model_client.py  test_phase5_validation.py  test_runtime_live.py  test_web_api.py
reproductions/claude-code/ui/: index.html  package-lock.json  package.json  vite.config.ts
reproductions/claude-code/ui/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
