[project]
name = "claude-code-repro"
version = "0.1.0"
description = "Claude Code cleanroom reproduction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
claude-code = "claude_code.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_code"]
