[project]
name = "claude-code-repro"
version = "0.1.0"
description = "Claude Code cleanroom reproduction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
claude-code = "claude_code.cli:main"
claude-code-web = "claude_code.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_code"]
